2002-05-28  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (setSP, FAST_SP) [I80386]: Don't define when using
	gcc-3.1.

2002-05-26  Bruno Haible  <bruno@clisp.org>

	Assume <locale.h> exists.
	* m4/locale.m4: Remove file.
	* m4/setlocale.m4 (CL_SETLOCALE): Assume <locale.h> exists.
	* configure.in (CL_LOCALE_H): Remove call.
	* unixconf.h.in (HAVE_LOCALE_H): Remove macro.
	* unix.d: Always include <locale.h> and declare setlocale.
	* spvw_ctype.d (init_ctype): Assume HAVE_LOCALE_H is defined.

2002-05-26  Bruno Haible  <bruno@clisp.org>

	Finish 1998-02-11 patch.
	* m4/cc-ansi.m4: Remove file.
	* m4/address.m4 (CL_ADDRESS_RANGE): Don't require CL_CC_ANSI.
	* configure.in (CL_CC_ANSI): Remove call.
	* makemake.in: Remove CC_ANSI handling.
	* Makefile.devel (acorn/makefile.cc): Pass second argument 'cc' to
	makemake.

2002-05-27  Sam Steingold  <sds@gnu.org>

	fixed last patch
	* makemake.in (NLS_INCLUDES): removed nls_cp1255 and nls_cp1258
	* charstrg.d (nstring_downcase): added cint32 case
	(nstring_upcase): removed the spurious extra case

2002-05-26  Bruno Haible  <bruno@clisp.org>

	* utils/unicode/Makefile (ALL): Remove nls_cp1255.c, nls_cp1258.c.
	(nls_cp1255.c, nls_cp1258.c): Remove rules.
	* nls_cp1255.c: Remove file.
	* nls_cp1258.c: Remove file.
	* constsym.d (CP1255, CP1258, WINDOWS-1255, WINDOWS-1258):
	Conditionalize on GNU_LIBICONV || glibc-2.2.
	(BIG5-HKSCS): Renamed from BIG5HKSCS.
	(KOI8-RU, EUC-JP, SHIFT-JIS, CP932, ISO-2022-JP, EUC-CN, GBK, CP936)
	(GB18030, EUC-TW, BIG5, CP950, BIG5-HKSCS, ISO-2022-CN)
	(ISO-2022-CN-EXT, EUC-KR, CP949, ISO-2022-KR, JOHAB, ARMSCII-8)
	(GEORGIAN-ACADEMY, GEORGIAN-PS, TIS-620, CP1133, VISCII, TCVN, UTF-16)
	(UTF-7): Also enable on glibc-2.2.
	(ISO-2022-JP-2): Also enable on glibc-2.3.
	* encoding.d: Don't include nls_cp1255.c and nls_cp1258.c.
	(nls_tables): Remove nls_cp1255_table, nls_cp1258_table.
	(iconv_first_sym, iconv_last_sym, iconv_num_encodings): Also define
	on glibc-2.2.