@@ -851,16 +851,12 @@ if [ $XCC_GCC = true ] ; then
       # gcc 2.3.3 may produce incorrect code when compiling spvw(SPVW_PURE)
       # with -O -fomit-frame-pointer
       if [ $CROSS = false ] ; then
-        XCC_GCC_VERSION=`$XCC -v 2>&1 | tail -1 | sed -e 's/.*version //g'`
+        XCC_GCC_VERSION=`$XCC -v 2>&1 | tail -1 | sed -e 's/.*version //g' -e 's/gcc //'`
         case "$XCC_GCC_VERSION" in
           2.7.[0-2] )
             # gcc-2.7.2 has a strength-reduction bug (fixed in gcc-2.7.2.1,
             # also fixed through the specs file of some Linux distributions).
             XCFLAGS=$XCFLAGS'-O2 -fexpensive-optimizations -fno-strength-reduce' ;;
-          3.1 )
-            # gcc-3.1 with -O mis-compiles eval.d, and with -O2 control.d,
-            # record.d and some other ==> no optimizations
-            ;;
           2.3.[3-9]* | 2.[4-9]* | 3.* | egcs-2.*)
             # XCFLAGS=$XCFLAGS'-O2 -fno-omit-frame-pointer' ;;
             # Let's try it nevertheless!
@@ -876,7 +872,7 @@ if [ $XCC_GCC = true ] ; then
       XCFLAGS=$XCFLAGS'-O2 -fno-strength-reduce'
     elif [ "$cpu" = sparc ] ; then
       if [ $CROSS = false ] ; then
-        XCC_GCC_VERSION=`$XCC -v 2>&1 | tail -1 | sed -e 's/.*version //g'`
+        XCC_GCC_VERSION=`$XCC -v 2>&1 | tail -1 | sed -e 's/.*version //g' -e 's/gcc //'`
         case "$XCC_GCC_VERSION" in
           egcs-2.*)
             # egcs-1.0.3 and egcs-1.1.1 produce incorrect code when compiling
@@ -895,6 +891,20 @@ if [ $XCC_GCC = true ] ; then
     else
       XCFLAGS=$XCFLAGS'-O2'
     fi
+    # For platforms that use global register variables...
+    case "$cpu" in
+      m68k | i386 | sparc | sparc64 | hppa | m88k | arm | alpha* | convex | s390*)
+        if [ $CROSS = false ] ; then
+          XCC_GCC_VERSION=`$XCC -v 2>&1 | tail -1 | sed -e 's/.*version //g' -e 's/gcc //'`
+          case "$XCC_GCC_VERSION" in
+            3.1*)
+              # gcc-3.1 produces incorrect code when compiling record (function
+              # C_make_instance).
+              XCFLAGS=$XCFLAGS' -fno-gcse' ;;
+          esac
+        fi
+        ;;
+    esac
   fi # DEBUGGING
   if [ $TSYS = win32gcc ] ; then
     XCFLAGS=$XCFLAGS' -D_WIN32';
